# smolcoder

./: Cargo.toml  README.md  context.md
src/: app.rs  ide.rs  main.rs  paths.rs  smolfile.rs  smolvm.rs  ssh.rs  state.rs
src/ide/: code.rs  jetbrains.rs
