[package]
name = "smolcoder"
version = "0.1.0"
edition = "2024"
description = "Open a smolvm-backed remote SSH coding machine"
license = "Apache-2.0"
repository = "https://github.com/manuschillerdev/smolcoder"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smolvm = { path = "../smolvm.expose-machine-api" }
